- Updated - Pagination to inherit button border radius
- Updated - Buttons selector to extend couple of other blocks buttons
- Updated - Minor updates to code structure (moved some code to its Gutenberg block)
- Updated - Sanitize link hover color output in global styles
- Updated - Gutenberg Styles extension: normalized hooks priorioty (20 for all hooks / 10 is for WP)

v5.2.7
- Removed - Redirect to admin about screen after switch theme
- Updated - Code cleanup
- Updated - Navigation add core color pallete
- Fixed - Double post dates (with updated posts)

v5.2.6
- Updated - Gutenberg Styles extension will process all blocks / customCSSId block attribute is not required anymore
- Updated - Styles extension better method naming
- Removed - Styles extension unnecessary methods
- Removed - customCSSId attribute from starter content
- Added - Gutenberg Styles extension filter CSS element (class or ID) via 

v5.2.5
- Fixed - Fatal error caused by Navigation WP_Block_List namespacing

v5.2.4
- Fixed - Social links svg height
- Updated - block-templates/block-patterns
- Updated - Search block markup/styles
- Updated - Columns styles to block (conditionaly when used)
- Updated - Navigation styles/scripts to chunks loaded only when used.
- Updated - WP Block Latest Posts - normalized to use Query Template to inherit the loop styles (with CSS modifier)
- Updated - WP Block Latest Comments - normalized to use Comment Query Template to inherit the loop styles (with CSS modifier)
- Updated - WeCodeArt\Support\FileSystem is now pointing to /assets/ folder
- Added - /cache/ folder for caching certain assets like utilities.css editor style
- Added - Block gap support to Gutenberg Styles extension
- Added - New Utilities PHP styles extension (removed BootStrap`s utilities) / loaded when used
- Added - wecodeart/filter/latest-comments/template to filter the latest comments widget block template (takes an array of blocks)

v5.2.3